[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Roman empire version 2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Cæsar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Level_2.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Information Cæsar 1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Information Cæsar 3.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Information Cæsar 2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Gammel_mand_2.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Lille_tutorial.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Romerkriger.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.937255, 0.866667, 0.584314 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.937255, 0.866667, 0.584314 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.937255, 0.866667, 0.584314 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Level_2" type="Node2D"]
script = ExtResource( 4 )

[node name="Roman empire" parent="." instance=ExtResource( 1 )]

[node name="Cæsar" parent="." instance=ExtResource( 3 )]
position = Vector2( 2183, 1150 )
scale = Vector2( 0.2, 0.2 )

[node name="Information" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="Information"]
margin_left = 15.0
margin_top = 86.0
margin_right = 660.0
margin_bottom = 372.0
custom_styles/panel = SubResource( 1 )

[node name="Information_1" type="Label" parent="Information"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 18.0
margin_top = 101.0
margin_right = 655.0
margin_bottom = 353.0
text = "Information 1:
Han blev født ind i en meget gammel og magtfuld familie og 
en politisk karriere var meget oplagt for ham. 
Da han bliver voksen følger han det normale italienske politiske karriermønster 
på det tidspunkt, men ca år 59-60 f.v.t indgår han en aftale med 2 af tidens mest 
magtfulde politikere, Marcus Licinius Crassus og Gnæus Pompeius Magnus. 
Derudover bliver Pompeius gift med Caesars eneste rigtige datter hvilke styrker alliancen ydeligere.
Af følge af denne alliance bliver Caesar udvalgt til konsul og derefter prokonsul 
som betyder han får lov til at kontrollerer en stor del at Italien.
Dog opstod der problemer alliancen efter kort tid, da Caesars datter og Crassus 
dør står det med at Caesar og Pompeius står tilbage som herskere i Italien. 
Pompeius har på dette tidspunkt kontrol over Rom og det vil Caesar gerne have, 
så han tager sin hær fra den del af Italien han styrer og marcherer mod Rom. 
Dog har Pompeius allerede flygtet væk fra Rom til Egypten hvor han bliver dræbt 
før Caesar kan fange ham, og dermed er Caesar nu enehersker i Romerriget."

[node name="Panel2" type="Panel" parent="Information"]
margin_left = 16.0
margin_top = 378.0
margin_right = 659.0
margin_bottom = 474.0
custom_styles/panel = SubResource( 2 )

[node name="Information_2" type="Label" parent="Information"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 18.0
margin_top = 390.0
margin_right = 658.0
margin_bottom = 472.0
text = "Information 2:
Caesar blev lokket til Forum hvor hans næstekommanderende ikke var for at 
bestkytte ham. Her mødtes han med 3 mænd, 2 af dem søn af manden der 
dræbte den tidligere Romerske konge. De ham mig 23 gange med dolk som han endte med at dø af."

[node name="Panel3" type="Panel" parent="Information"]
margin_left = 16.0
margin_top = 480.0
margin_right = 488.0
margin_bottom = 580.0
custom_styles/panel = SubResource( 3 )

[node name="Information_3" type="Label" parent="Information"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 18.0
margin_top = 490.0
margin_right = 501.0
margin_bottom = 572.0
text = "Information 3:
Caesar fik kun 1 barn. En datter han fik sammen med hans kone Cornelia, 
datteren hed Julia Caesaris og døde senere i livet ved fødsel.
Julius Caesar adopterede dog Augustus som endte med at blive kejser 
efter Julius Caesar og tog hævn på dem der slog Julius Caesar ihjel."

[node name="Information Cæsar 1" parent="." instance=ExtResource( 6 )]
position = Vector2( 922, -436 )

[node name="Information Cæsar 2" parent="." instance=ExtResource( 8 )]
position = Vector2( 1870, -1537 )

[node name="Information Cæsar 3" parent="." instance=ExtResource( 7 )]
position = Vector2( 3140, -126 )

[node name="Gammel_mand_2" parent="." instance=ExtResource( 9 )]
position = Vector2( 547, 14 )
scale = Vector2( 0.35, 0.35 )

[node name="Romerkriger" parent="." instance=ExtResource( 11 )]
position = Vector2( 978, -396 )

[node name="Romerkriger2" parent="." instance=ExtResource( 11 )]
position = Vector2( 1047, -474 )

[node name="Romerkriger3" parent="." instance=ExtResource( 11 )]
position = Vector2( 1230, -381 )

[node name="Romerkriger4" parent="." instance=ExtResource( 11 )]
position = Vector2( 1395, -417 )

[node name="Romerkriger5" parent="." instance=ExtResource( 11 )]
position = Vector2( 1869, -1051 )

[node name="Romerkriger6" parent="." instance=ExtResource( 11 )]
position = Vector2( 2644, -126 )

[node name="Romerkriger7" parent="." instance=ExtResource( 11 )]
position = Vector2( 2930, -80 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 504, 17 )

[node name="Menu" parent="." instance=ExtResource( 5 )]

[node name="Lille_tutorial" parent="." instance=ExtResource( 10 )]
